maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: ';' expected but ')' found.
      var y = (_C(it)/100).toInt) % 100
                                ^